--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,96 @@
 body {
-    margin: 0; /* Remove default body margin */
-    padding: 0; /* Remove default body padding */
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+}
 
-  .grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 0; /* Set the gap between columns to zero */
-    max-width: 950px;
-  }
 
-  .column {
-    flex: 1;
-    margin: 0;
-    padding: 0;
-    border-right: 1px solid black;
-  }
+.button-19 {
+  min-width: 200px;
+  width: 25%;
+  appearance: button;
+  background-color: #1899D6;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: din-round,sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  letter-spacing: .8px;
+  line-height: 20px;
+  margin: 20px;
+  outline: none;
+  overflow: visible;
+  padding: 13px 16px;
+  text-align: center;
+  text-transform: uppercase;
+  touch-action: manipulation;
+  transform: translateZ(0);
+  transition: filter .2s;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+}
 
-  .cell {
-    border: 1px solid black;
-    margin: 0;
-    aspect-ratio: 1;
-    box-sizing: border-box;
-    cursor: pointer; 
-  }
+.button-19:after {
+  background-clip: padding-box;
+  background-color: #1CB0F6;
+  border: solid transparent;
+  border-radius: 16px;
+  border-width: 0 0 4px;
+  bottom: -4px;
+  content: "";
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.button-19:main,
+.button-19:focus {
+  user-select: auto;
+}
+
+.button-19:hover:not(:disabled) {
+  filter: brightness(1.1);
+  -webkit-filter: brightness(1.1);
+}
+
+.button-19:disabled {
+  cursor: auto;
+}
+
+.button-19:active {
+  border-width: 4px 0 0;
+  background: none;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(var(--columns), 1fr);
+  gap: 1px;
+}
+
+.column {
+  display: flex;
+}
+
+.cell {
+  flex: 1;
+  aspect-ratio: 1;
+  border: 1px solid #ccc;
+}
+
+#grid-container {
+  border: 1px solid #ccc;
+  width: 80%;
+}
